preparation for stand-alone node.